src2/objects/Sales_Org__c.object
<CustomObject>
    <fields>
        <fullName>Brand_Code__c</fullName>
        <label>Brand Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Code__c</fullName>
        <externalId>true</externalId>
        <label>Code</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Default_Account_Owner__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Default Account Owner</label>
        <referenceTo>User</referenceTo>
        <relationshipName>Sales_Organizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Internal_Account__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Internal Reference Account</label>
        <referenceTo>Account</referenceTo>
        <relationshipLabel>Sales Organizations</relationshipLabel>
        <relationshipName>Sales_Organizations</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Market_Code__c</fullName>
        <label>Market Code</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Nespresso_Entity__c</fullName>
        <label>Nespresso Entity</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Sales Organization</label>
    <listViews>
        <fullName>All</fullName>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Sales Organization Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Organizations</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>